<resources>
    <string name="app_name">MyHabitReminder</string>
    <string name="settings">Настройки</string>
    <string name="habits">Привычки</string>
    <string name="notifications">Напоминания</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="habit_created">Habit created successfully!</string>
    <string name="time">Time: %s</string>
    <string name="date">Date: %s</string>
    <string name="habit_title">Habit title</string>
    <string name="give_it_a_short_description">Give it a short description</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="date_not_selected">Date: (not selected)</string>
    <string name="pick_a_time">Pick a time</string>
    <string name="time_not_selected">Time: (not selected)</string>
    <string name="confirm">Confirm</string>
    <string name="add_a_habit">Add a habit!</string>
    <string name="delete_everything">Delete everything</string>
    <string name="delete_habits">Delete Habits</string>
    <string name="are_you_sure_to_delete_habit">Хотите удалить напоминалку?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="create_account"><u>Create Account</u></string>
    <string name="new_user">New user?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="please_tell_us_about_yourself">Please tell us about yourself</string>
    <string name="text_fragment_dialog_resetting_password">Resetting password</string>
    <string name="text_fragment_dialog_message">Please enter your email, we will send you a new password</string>
    <string name="text_fragment_dialog_text_send">Send</string>

    <string name="unknown_error">Unexpected error occurred. Please try again</string>
    <string name="already_signed_in_error">You already signed in</string>
</resources>