<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".presentation.fragments.LoginFragment">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_marginHorizontal="@dimen/margin_horizontal_16dp"
        android:layout_marginTop="@dimen/marginTop_16"
        android:layout_marginBottom="8dp"
        android:background="@drawable/layout_bg_round_corners"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="20dp"
        android:hint="@string/username"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginHorizontal="@dimen/margin_horizontal_16dp"
        android:background="@drawable/layout_bg_round_corners"
        android:drawableStart="@drawable/ic_info"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="@dimen/marginTop_16"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/login" />

    <TextView
        android:id="@+id/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/margin_horizontal_16dp"
        android:layout_marginTop="@dimen/marginTop_16"
        android:layout_marginBottom="20dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/new_user_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotpass"
        android:layout_marginStart="16dp"
        android:text="@string/new_user"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_20" />

    <TextView
        android:id="@+id/create_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_user_tv"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_20" />

</RelativeLayout>