<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_bg_round_corners"
    android:backgroundTint="#BDBDBD"
    android:maxWidth="900dp"
    android:minWidth="360dp"
    android:orientation="vertical"
    tools:context=".presentation.fragments.ResetPasswordFragment">

    <TextView
        android:id="@+id/text_view_top_dialog_resetpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="0dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/text_fragment_dialog_resetting_password"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_20" />

    <TextView
        android:id="@+id/text_view_dialog_resetpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/text_fragment_dialog_message"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_20" />

    <EditText
        android:id="@+id/edit_text_dialog_resetpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="emailAddress"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:drawableTint="@color/white"
        android:inputType="textEmailAddress|textNoSuggestions"
        android:labelFor="@id/edit_text_dialog_resetpass"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_20" />

    <Button
        android:id="@+id/send_new_password"
        style="@style/refresh_button"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/text_fragment_dialog_text_send" />

</LinearLayout>