<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".presentation.fragments.CreateHabitFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_habitTitle_1"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_16dp"
        android:layout_marginTop="120dp"
        android:hint="@string/habit_title"
        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_habitTitle"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_habitDescription_1"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_16dp"
        android:layout_marginTop="@dimen/marginTop_16"
        android:hint="@string/how_many_days"
        android:inputType="number"
        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_habitTitle_1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_habitDescription"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_pickDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_16dp"
        android:layout_marginTop="@dimen/marginTop_16"
        android:background="@drawable/round_button"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/pick_a_date"
        android:textColor="@color/orange"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="@+id/et_habitDescription_1"
        app:layout_constraintTop_toBottomOf="@+id/et_habitDescription_1" />

    <TextView
        android:id="@+id/tv_dateSelected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_16dp"
        android:layout_marginTop="@dimen/marginTop_16"
        android:text="@string/date_not_selected"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_20"
        app:layout_constraintStart_toStartOf="@+id/btn_pickDate"
        app:layout_constraintTop_toBottomOf="@+id/btn_pickDate" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_16dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/round_button"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/confirm"
        android:textColor="@color/orange"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="@+id/tv_dateSelected"
        app:layout_constraintTop_toBottomOf="@+id/tv_dateSelected" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/tv_dateSelected"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_dateSelected"
        app:layout_constraintTop_toBottomOf="@+id/tv_dateSelected" />

</androidx.constraintlayout.widget.ConstraintLayout>